--- a/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
@@ -28,15 +28,17 @@
         </li>
       </ul>
       <ul class="course-tasks-type row">
-        {% for type, value in types %}
-        <li class="col-xs-3 course-tasks-type-item js-course-tasks-item">
-          <a data-role="activityType" data-type="{{ type }}" href="javascript:;"
-             data-content-url="{{ path('course_manage_task_create',{courseId:course.id, type:type}) }}">
-            <i class="{{ value.icon }}"></i>
-            {{ value.name }}
-          </a>
-        </li>
-        {% endfor %}
+        {% if types is defined %}
+          {% for type, value in types  %}
+          <li class="col-xs-3 course-tasks-type-item js-course-tasks-item">
+            <a data-role="activityType" data-type="{{ type }}" href="javascript:;"
+               data-content-url="{{ path('course_manage_task_create',{courseId:course.id, type:type}) }}">
+              <i class="{{ value.icon }}"></i>
+              {{ value.name }}
+            </a>
+          </li>
+          {% endfor %}
+        {% endif %}
       </ul>
     </div>
 
