--- a/src/WebBundle/Resources/views/TextActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TextActivity/modal.html.twig
@@ -1,4 +1,4 @@
-{% extends 'WebBundle:TaskManage:edit-activity-layout.html.twig' %}
+{% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
 
 {% block activity_content %}
   <div class="row form-group">
