--- a/src/Classroom/ClassroomBundle/Resources/views/Classroom/explore.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/Classroom/explore.html.twig
@@ -13,7 +13,7 @@
         <i class="es-icon es-icon-viewcomfy"></i>
         {{'%name%列表'|trans({'%name%':setting('classroom.name')|default('班级'|trans)})}}
       </div>
-      <a class="btn btn-primary btn-lg more" href="{{ path('course_explore') }}">{{ setting('classroom.name')|default('班级'|trans) }}
+      <a class="btn btn-primary btn-lg more" href="{{ path('course_explore') }}">
         {{'查看课程'|trans}}
       </a>
     </div>
