默认值置空修复

--- a/src/Topxia/AdminBundle/Resources/views/System/jobs.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/jobs.html.twig
@@ -33,7 +33,7 @@
 
   <a class="glyphicon glyphicon-question-sign text-muted pull-center pull-right" id="tips" data-toggle="tooltip" data-placement="left" href="javascript:" title="" data-original-title=""></a>
   <div id="tips-html" style="display:none;">
-    <p>{{ '定时任务为系统为了保证系统业务的正常进行自动生成系统级任务,不需要进行任何手动操作'|trans }}</p> 
+    <p>{{ '定时任务是系统为了保证系统业务的正常进行自动生成系统级任务,不需要进行任何手动操作'|trans }}</p> 
   </div>
 </form>
 
