--- a/src/WebBundle/Resources/views/TextActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TextActivity/modal.html.twig
@@ -26,8 +26,7 @@
       <label for="condition">{{ '完成条件'|trans }}</label>
     </div>
     <div class="col-md-9 controls">
-      <input id="condition" class="form-control" type="text" name="condition" value={{ activity.title|default('') }}></div>
+      {#<input id="condition" class="form-control" type="text" name="condition" value={{ activity.title|default('') }}></div>#}
   </div>
-  <script>app.load('webbundle/controller/activity-manage/text-activity-fields.js')</script>
 {% endblock %}
 
