--- a/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
@@ -1,6 +1,9 @@
-{% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
-
+{% extends 'TopxiaWebBundle::bootstrap-modal-layout-webpack.html.twig' %}
 {% set modal_class= "modal-md" %}
+
+{% do css(['web.css']) %}
+{% do script(['web/taskmanage/create.js']) %}
+
 
 {% block title %}
   {% if activity|default(false) %}
@@ -53,5 +56,5 @@
   <button id="course-tasks-prev" type="submit" class="btn btn-primary">{{ '上一步'|trans }}</button>
   <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
   <button id="course-tasks-submit" type="submit" class="btn btn-primary" data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
-  <script>app.load('webbundle/controller/task-manage/create.js')</script>
+  {#<script>app.load('webbundle/controller/task-manage/create.js')</script>#}
 {% endblock %}
