--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -19,9 +19,7 @@
 
 {% block title %}{{ '教学计划管理'|trans }} - {{ parent() }}{% endblock %}
 
-{% set side_nav = 'task' %}
-{% set script_controller = 'course-manage/task' %}
-
+{% do script(['libs/vendor.js', 'web.js']) %}
 {% block main %}
 
   <div class="panel panel-default panel-col lesson-manage-panel">
