--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -2,7 +2,7 @@
 {% set modal_class= "modal-md" %}
 
 {% do css(['web.css']) %}
-{% do script(['web/taskmanage/create.js']) %}
+{% do script(['libs/ckeditor.js','libs/jquery-validation.js','web/taskmanage/create.js']) %}
 
 
 {% block title %}
