--- a/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
+++ b/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
@@ -39,3 +39,8 @@
     {% endblock %}
   </form>
 </div>
+{% block script %}
+  {% for path in script()  %}
+    <script src="{{ asset('build/' ~ path, 'webpack') }}"></script>
+  {% endfor %}
+{% endblock %}
