--- a/src/WebBundle/Resources/views/TextActivity/modal.html.twig
+++ b/src/WebBundle/Resources/views/TextActivity/modal.html.twig
@@ -1,4 +1,5 @@
 {% extends 'WebBundle:Activity:activity-form-layout.html.twig' %}
+{% do script(['web/activity-manage/text-activity-fields.js']) %}
 
 {% block activity_content %}
   <div class="row form-group">
@@ -28,6 +29,6 @@
     <div class="col-md-9 controls">
       <input id="condition" class="form-control" type="text" name="condition" value={{ activity.title|default('') }}></div>
   </div>
-  <script>app.load('webbundle/controller/activity-manage/text-activity-fields.js')</script>
+  {#<script>app.load('webbundle/controller/activity-manage/text-activity-fields.js')</script>#}
 {% endblock %}
 
