--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -51,17 +51,16 @@
         {% endif %}
       </ul>
     </div>
-
+  
     <div class="tab-content">
-
-    </div>
-
+        
+      </div>
     <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'>
     <input class="js-hidden-data" type="hidden" name="fromCourseId" value='{{ course.id }}'>
   </div>
 {% endblock %}
 {% block footer %}
-  <button id="course-tasks-prev" type="submit" class="btn btn-primary">{{ '上一步'|trans }}</button>
+  <button id="course-tasks-prev" type="submit" class="btn btn-primary" disabled>{{ '上一步'|trans }}</button>
   <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
   <button id="course-tasks-submit" type="submit" class="btn btn-primary"
           data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
