--- a/src/WebBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/modal.html.twig
@@ -2,7 +2,7 @@
 {% set modal_class= "modal-md" %}
 
 {% do css(['web.css']) %}
-{% do script(['libs/ckeditor.js','libs/jquery-validation.js','web/task-manage/create.js']) %}
+{% do script(['web/task-manage/create.js']) %}
 
 {% block title %}
   {% if activity|default(false) %}
@@ -52,7 +52,7 @@
       </ul>
     </div>
   
-    <div class="tab-content">
+    <div id="task-content">
         
       </div>
     <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'>
