域名检查是否一致的function 重命名

--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -3,7 +3,8 @@
 {% set panel = 'dashboard' %}
 {% set script_controller = 'default/index' %}
 {% block container %}
-  {{ render(controller('TopxiaAdminBundle:Default:inspect')) }}
+  {# 域名检查提示#}
+  {{ render(controller('TopxiaAdminBundle:Default:validateDomain')) }}
 
     <div class="row">
       {% if not (setting('copyright.thirdCopyright')|default(0) == 1) %}
