--- a/src/Topxia/AdminBundle/Resources/views/Default/system-status.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/system-status.html.twig
@@ -14,13 +14,12 @@
   <li>
     <div class="title">网校应用</div>
     <div class="info">
-      {% if upgradeAppCount %}
+      {% if upgradeAppCount == 0 %}
         <span class="glyphicon glyphicon-ok-sign text-success"></span>
         <span class="text-lg">已更新</span>
       {% else %}
         <span class="glyphicon glyphicon-info-sign text-danger"></span>
-        <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}"> {{ upgradeAppCount }}
-          个未更新</a>
+        <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}"> {{ upgradeAppCount }} 个未更新</a>
       {% endif %}
     </div>
   </li>
