--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -1,56 +1,48 @@
 <ul class="subfield-list eight-subfield clearfix">
   <li>
-    <div class="title">{{ '登录用户'|trans }}</div>
-    <span class="number">  {{ loginCount }} </span>
-    <p>{{ '在线总数'|trans }}: {{ onlineCount }}</p>
+    <div class="title">{{ '在线用户'|trans }}</div>
+    <span class="number"> 登录 <span>{{ loginCount| default('0') }}</span> </span>
+    <p>{{ '总数'|trans }}: {{ onlineCount }}</p>
   </li>
   <li>
-    <div class="title">{{ '今日新增注册'|trans }}</div>
-    <span class="number">
-      {{ todayRegisterNum }}
-   </span>
-    <p>{{ '注册总数'|trans }}: {{ totalRegisterNum }}</p>
+    <div class="title">{{ '新增注册'|trans }}</div>
+    <span class="number">今日<span> {{ todayRegisterNum }}</span> </span>
+    <p>{{ '总数'|trans }}: {{ totalRegisterNum }}</p>
   </li>
   <li>
-    <div class="title">{{ '今日课程新增学员'|trans }}</div>
-    <span class="number">
-      {{ todayCourseMemberNum }}
-   </span>
-    <p>{{ '总课程学习人次'|trans }}: {{ totalCourseMemberNum }}</p>
+    <div class="title">{{ '课程新增学员'|trans }}</div>
+    <span class="number"> 今日<span> {{ todayCourseMemberNum }} </span></span>
+    <p>{{ '总人次'|trans }}: {{ totalCourseMemberNum }}</p>
   </li>
   <li>
-    <div class="title">{{ '今日班级新增学员'|trans }}</div>
-    <span class="number">
-      {{ todayClassroomMemberNum }}
-   </span>
-    <p>{{ '总班级学习人次'|trans }}: {{ totalClassroomMemberNum }}</p>
+    <div class="title">{{ '班级新增学员'|trans }}</div>
+    <span class="number">今日<span> {{ todayClassroomMemberNum }}</span> </span>
+    <p>{{ '总人次'|trans }}: {{ totalClassroomMemberNum }}</p>
   </li>
   <li>
-    <div class="title">{{ '今日新增会员'|trans }}</div>
-    <span class="number">
-      {{ todayVipNum }}
-   </span>
-    <p>{{ '总会员数'|trans }}: {{ totalVipNum }}</p>
+    <div class="title">{{ '新增会员'|trans }}</div>
+    <span class="number"> 今日<span>{{ todayVipNum }} </span></span>
+    <p>{{ '总数'|trans }}: {{ totalVipNum }}</p>
   </li>
   <li>
-    <div class="title">{{ '今日回答未回复'|trans }}</div>
-    <span class="number">
+    <div class="title">{{ '回答未回复'|trans }}</div>
+    <span class="number">今日<span>
       {{ todayThreadNum }}/{{ todayThreadUnAnswerNum }}
-   </span>
-    <p>{{ '总问答数'|trans }}: {{ totalThreadNum }}</p>
+   </span></span>
+    <p>{{ '总数'|trans }}: {{ totalThreadNum }}</p>
   </li>
   <li>
     <div class="title">{{ '已发布课程'|trans }}</div>
-    <span class="number">
+    <span class="number">今日<span>
       {{ publishedCourseNum }}
-   </span>
-    <p>{{ '总课程数'|trans }}: {{ totalCourseNum }}</p>
+   </span></span>
+    <p>{{ '总数'|trans }}: {{ totalCourseNum }}</p>
   </li>
   <li>
     <div class="title">{{ '已发布班级'|trans }}</div>
-    <span class="number">
+    <span class="number">今日<span>
       {{ publishedClassroomNum }}
-   </span>
-    <p>{{ '总班级数'|trans }}: {{ totalClassroomNum }}</p>
+   </span></span>
+    <p>{{ '总数'|trans }}: {{ totalClassroomNum }}</p>
   </li>
 </ul>
