--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -32,15 +32,15 @@
     <p>{{ '总数'|trans }}: {{ totalThreadNum }}</p>
   </li>
   <li>
-    <div class="title">{{ '已发布课程'|trans }}</div>
-    <span class="number">今日<span>
+    <div class="title">{{ '课程'|trans }}</div>
+    <span class="number">已发布<span>
       {{ publishedCourseNum }}
    </span></span>
     <p>{{ '总数'|trans }}: {{ totalCourseNum }}</p>
   </li>
   <li>
-    <div class="title">{{ '已发布班级'|trans }}</div>
-    <span class="number">今日<span>
+    <div class="title">{{ '班级'|trans }}</div>
+    <span class="number">已发布<span>
       {{ publishedClassroomNum }}
    </span></span>
     <p>{{ '总数'|trans }}: {{ totalClassroomNum }}</p>
