--- a/src/Topxia/AdminBundle/Resources/views/Default/system-status.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/system-status.html.twig
@@ -4,7 +4,7 @@
     <div class="info">
       {% if mainAppUpgrade %}
         <span class="glyphicon glyphicon-info-sign text-danger"></span>
-         <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}">{{ mainAppUpgrade.package.toVersion }} 更新</a>
+         <a class="text-lg link-underline text-danger" href="{{ path("admin_app_upgrades") }}">{{ mainAppUpgrade.package.fromVersion }} 更新</a>
       {% else %}
         <span class="glyphicon glyphicon-ok-sign text-success"></span>
         <span class="text-lg">{{ constant('Topxia\\System::VERSION') }}</span>
