--- a/app/Resources/assets/libs/vendor.less
+++ b/app/Resources/assets/libs/vendor.less
@@ -1,6 +1,7 @@
 @import '~nodeModulesDir/reset.css/reset.css';
 @import '~nodeModulesDir/bootstrap/dist/css/bootstrap.css';
 @import '~nodeModulesDir/font-awesome/css/font-awesome.css';
+@import '~nodeModulesDir/bootstrap-datetimepicker-webpack/dist/css/botstrap-datepicker.css';
 
 @import './less/bootstrap-extends.less';
 @import './less/common.less';
